--- a/nieruchomości/Views/Admin/_addFlat.cshtml
+++ b/nieruchomości/Views/Admin/_addFlat.cshtml
@@ -128,6 +128,16 @@
                         <input type="file" multiple class="form-control" id="Files" name="Files" accept="image/*" />
                     </div>
                 </div>
+                <div class="row" style="color: rgb(74, 0, 0)">
+                    <div class="col-md-12">
+                        <div class="col-md-8" style="font-size:10px">
+                            Akceptowane pliki: jpg, png, gif, bnp
+                        </div>
+                        <div class="col-md-4" style="text-align:right; font-size:10px">
+                            Max 5MB
+                        </div>
+                    </div>
+                </div>
                 <input type="hidden" id="AdType" name="AdType" value="Flat" />
                 <div class="row">
                     <div class="col-md-12" style="text-align: center; margin-top: 10px">
@@ -139,3 +149,30 @@
         </div>
     </div>
 }
+<script src="~/Scripts/jquery-1.10.2.js"></script>
+<script type="text/javascript">
+    $("#Files").on("change", function () {
+        var errors = [];
+        var valid = true;
+        var totalSize = 0;
+        for (var i = 0; i < $(this)[0].files.length; i++) {
+            if ($(this)[0].files[i].size / 1024 / 1024 > 5) {
+                valid = false;
+                errors.push('Plik: ' + $(this)[0].files[i].name + ' jest zbyt duży! (max 5MB)');
+            }
+            totalSize += $(this)[0].files[i].size / 1024 / 1024;
+        }
+        
+        if (valid == true) {
+            if (totalSize > 20) {
+                valid = false;
+                errors.push("Łączna wielkość plików jest za duża! (max 20MB)");
+            }
+        }
+        
+        if (valid == false) {
+            $(this)[0].value = "";
+            alert(errors.join("\n"));
+        }
+    })
+</script>
