--- a/nieruchomości/Views/Shared/_Layout.cshtml
+++ b/nieruchomości/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
     }
     <div class="row">
         <div class="col-md-2 custom-left-menu">
-            <img src="~/Content/img/the-palace-of-culture.jpg" width="100%"/>
+            <a href="/Home"><img src="~/Content/img/the-palace-of-culture.jpg" width="100%" /></a>
         </div>
         <div class="col-md-10">
             <div class="col-md-6">
@@ -115,7 +115,7 @@
                     {
                         <div class="row">
                             <div class="col-md-6" style="padding-right: 0px">
-                                <input class=" form-control input-sm" name="key"/>
+                                <input class=" form-control input-sm" name="key" pattern="[0-9]+" oninvalid="setCustomValidity('Wprowadź numer oferty!')" oninput="setCustomValidity('')" type="text" />
                             </div>
                             <div class="col-md-6" style="padding-left: 10px">
                                 <button type="submit" class="btn btn-sm btn-default">Wyszukaj</button>
