--- a/nieruchomości/Views/Admin/AdList.cshtml
+++ b/nieruchomości/Views/Admin/AdList.cshtml
@@ -1,6 +1,7 @@
 ﻿@using System.Data.SqlTypes
 @using nieruchomości.Helpers
-@model System.Collections.Generic.IEnumerable<Models.ViewModels.AdminAdvertToShow>
+@using PagedList.Mvc
+@model PagedList.PagedList<Models.ViewModels.AdminAdvertToShow>
 <style type="text/css">
     label {
         font-size: small;
@@ -144,54 +145,56 @@
             <div class="col-md-12" style="font-size: small">
                 <table class="table" style="font-size:11px">
                     <thead>
-                    <tr>
-                        <th>
-                            Data dodania
-                        </th>
-                        <th>
-                            Rodzaj
-                        </th>
-                        <th>
-                            Tytuł
-                        </th>
-                        <th>
-                            Miasto
-                        </th>
-                        <th>
-                            Osoba prowadząca
-                        </th>
-                        <th></th>
-                        <th>Pokaż/Ukryj</th>
-                    </tr>
+                        <tr>
+                            <th>
+                                Data dodania
+                            </th>
+                            <th>
+                                Rodzaj
+                            </th>
+                            <th>
+                                Tytuł
+                            </th>
+                            <th>
+                                Miasto
+                            </th>
+                            <th>
+                                Osoba prowadząca
+                            </th>
+                            <th></th>
+                            <th>Pokaż/Ukryj</th>
+                        </tr>
                     </thead>
                     <tbody>
-                    @foreach (var ad in Model)
-                    {
-                        <tr>
-                            <td>@ad.CreatedAt.ToShortDateString()</td>
-                            <td>@EnumNameHelper.GetAdType(ad.AdType)</td>
-                            <td>@ad.Title</td>
-                            <td>@ad.City</td>
-                            <td>@ad.Worker.FullName</td>
-                            <td style="text-align: center">
-                                @Html.ActionLink("Info", "Show", "Home", new {key = ad.Number}, new {@class = "btn btn-success btn-xs"})
-                                @Html.ActionLink("Edytuj", "EditAd", "Admin", new {id = ad.Id, adType = ad.AdType}, new {@class = "btn btn-danger btn-xs"})
-                                @Html.ActionLink("Usuń", "DeleteAd", "Admin", new { id = ad.Id, adType = ad.AdType }, new { @class = "btn btn-primary btn-xs", @onclick = "return confirm('Napewno usunąć to ogłoszenie?');" })
-                            </td>
-                            <td style="text-align: center">
-                                @if (ad.Visible)
-                                {
-                                    @Html.ActionLink("Ukryj", "Hide", "Admin", new {id = ad.Id, adType = ad.AdType}, new {@class = "btn btn-default btn-xs"})
-                                }
-                                else
-                                {
-                                    @Html.ActionLink("Pokaż", "Hide", "Admin", new {id = ad.Id, adType = ad.AdType}, new {@class = "btn btn-info btn-xs"})
-                                }
-                            </td>
-                        </tr>
-                    }
+                        @foreach (var ad in Model)
+                        {
+                            <tr>
+                                <td>@ad.CreatedAt.ToShortDateString()</td>
+                                <td>@EnumNameHelper.GetAdType(ad.AdType)</td>
+                                <td>@ad.Title</td>
+                                <td>@ad.City</td>
+                                <td>@ad.Worker.FullName</td>
+                                <td style="text-align: center">
+                                    @Html.ActionLink("Info", "Show", "Home", new {key = ad.Number}, new {@class = "btn btn-success btn-xs"})
+                                    @Html.ActionLink("Edytuj", "EditAd", "Admin", new {id = ad.Id, adType = ad.AdType}, new {@class = "btn btn-danger btn-xs"})
+                                    @Html.ActionLink("Usuń", "DeleteAd", "Admin", new { id = ad.Id, adType = ad.AdType }, new { @class = "btn btn-primary btn-xs", @onclick = "return confirm('Napewno usunąć to ogłoszenie?');" })
+                                </td>
+                                <td style="text-align: center">
+                                    @if (ad.Visible)
+                                    {
+                                        @Html.ActionLink("Ukryj", "Hide", "Admin", new {id = ad.Id, adType = ad.AdType}, new {@class = "btn btn-default btn-xs"})
+                                    }
+                                    else
+                                    {
+                                        @Html.ActionLink("Pokaż", "Hide", "Admin", new {id = ad.Id, adType = ad.AdType}, new {@class = "btn btn-info btn-xs"})
+                                    }
+                                </td>
+                            </tr>
+                        }
                     </tbody>
                 </table>
+                <small>Strona @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) z @Model.PageCount</small>
+                <div style="text-align:center">@Html.PagedListPager(Model, page => Url.Action("AdList", new { page, changed = ViewBag.changed, hide = ViewBag.hide, hidden = ViewBag.hidden, search = ViewBag.Search, key = ViewBag.key, worker = ViewBag.worker, showHidden = ViewBag.showHidden, dateFrom = ViewBag.dateFrom, dateTo = ViewBag.dateTo, type = ViewBag.type }))</div>
             </div>
         </div>
     </div>
