--- a/nieruchomości/Views/Admin/Messages.cshtml
+++ b/nieruchomości/Views/Admin/Messages.cshtml
@@ -1,5 +1,6 @@
 ﻿@using System.Data.SqlTypes
-@model List<Models.EntityModels.Mail>
+@using PagedList.Mvc
+@model PagedList.PagedList<Models.EntityModels.Mail>
 
 <div class="row" style="margin-right: 15px">
     <div class="col-md-12 custom-center-panel" style="margin-left: 15px">
@@ -56,6 +57,8 @@
                         }
                     </tbody>
                 </table>
+                <small>Strona @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) z @Model.PageCount</small>
+                <div style="text-align:center">@Html.PagedListPager(Model, page => Url.Action("Messages", new { page }))</div>
             </div>
         </div>
     </div>
