--- a/nieruchomości/Views/Home/_ShowFlat.cshtml
+++ b/nieruchomości/Views/Home/_ShowFlat.cshtml
@@ -5,8 +5,15 @@
 @{
     ViewBag.Title = "ShowFlat";
 }
-
-
+@*
+        <style type="text/css">
+            option-button
+        .option-button {
+            height:200%;
+            font-weight: bold;
+        }
+    </style>
+*@
 
 <script src="~/Scripts/jquery-1.10.2.js"></script>
 <script src="~/Scripts/modalform.js"></script>
@@ -64,9 +71,9 @@
                         <div class="col-md-5">Cena:</div>
                         <div class="col-md-7">@Model.Price zł</div>
                     </div>
-                    
+
                     <div class="panel-body ">
-                        @Html.ActionLink("Kalkulator opłat dodatkowych", "CalcView", "Home", new { XPrice = Model.Price, XOwnershipForm = Model.Ownership }, new { data_modal = "", id = "btnCreate", @class = "btn btn-info center-block" })
+                        @Html.ActionLink("Kalkulator opłat dodatkowych", "CalcView", "Home", new { XPrice = Model.Price, XOwnershipForm = Model.Ownership }, new { data_modal = "", id = "btnCreate", @class = "btn btn-sm btn-info center-block " })
                     </div>
                 </div>
             </div>
@@ -168,6 +175,8 @@
         $(".custom-head-photo").prop("src", link);
     });
 </script>
+
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
