--- a/nieruchomości/Views/Home/CalcView.cshtml
+++ b/nieruchomości/Views/Home/CalcView.cshtml
@@ -6,33 +6,49 @@
 @{
     ViewBag.Title = "ShowCalc";
 
-    int procent = 3;
+    double kwota = 0;
+    if (Model.CalcPrice!=null)
+    {
+        kwota = Convert.ToDouble(Model.CalcPrice);
+    }
+    
+    /*string cena = kwota.Where(x => Convert.ToInt32(x) <= 9 || x == ',').Aggregate<char, string>(null, (current, x) => current + x);
+
+
+    double xcena = Convert.ToDouble(cena);
+    int procent = 3;*/
     //int flatPrice = Int32.Parse(Model.XPrice);
 
 }
 
 
-
-
 <script>
-    function calculateBMI() {
-        var wtStr = document.form.weight.value;
-        if (!wtStr)
-            wtStr = '0';
-        var htStr = document.form.height.value;
-        if (!htStr)
-            htStr = '0';
-        var weight = parseFloat(wtStr);
-        var height = parseFloat(htStr);
-        document.form.BodyMassIndex.value = (weight + height)*@procent;
+    function CalculateAddPrice() {
 
+
+        var cost = document.form.Koszt.value;
+        if (!cost)
+            cost = '0';
+        var procent = document.form.Percent.value;
+        if (!procent)
+            procent = '0';
+        var StartCost = parseFloat(cost);
+        var StartPercent = parseFloat(procent);
+        document.form.AddCosts.value = (StartCost * StartPercent / 100);
+        document.form.FullCosts.value = (StartCost + StartCost * StartPercent / 100);
     }
 </script>
 
 
 <form name="form" id="form">
-    <input type="Text" name="weight" size="4" onkeyup="calculateBMI()"> Weight (in Kilos)
-    <input type="Text" name="height" size="4" onkeyup="calculateBMI()"> Height (in Centimeters)<br>
-    <input type="Text" name="BodyMassIndex" id="BodyMassIndex" size="4"> BMI
-    <input type="button" style="font-size: 8pt" value="Calculate" onclick="calculateBMI()" name="button">
+    <input type="Text" name="Koszt" size="4" value="@kwota" onkeyup="CalculateAddPrice()"> Cena Nieruchomości (PLN)<br>
+    <input type="Text" name="Percent" size="4" value="2" onkeyup="CalculateAddPrice()"> Prowizja agencji (%)<br>
+
+    <input type="Text" name="AddCosts" id="AddCosts" readonly="readonly" size="6"> Dodatkowe koszty<br>
+    <input type="Text" name="FullCosts" id="FullCosts" readonly="readonly" size="4" > Całkowite koszty<br>
 </form>
+
+
+<script language="javascript">
+    window.onload = CalculateAddPrice();
+</script>
