--- a/nieruchomości/Views/Admin/AdminMenu.cshtml
+++ b/nieruchomości/Views/Admin/AdminMenu.cshtml
@@ -1,4 +1,9 @@
-﻿<div class="row">
+﻿<style type="text/css">
+     small {
+         font-size: 70%;
+     }
+ </style>
+<div class="row">
     <div class="col-md-2">
         <a role="button" class="btn btn-success" style="width: 100%" href="/Admin/Messages">
             <span class="glyphicon glyphicon-envelope"></span>
@@ -38,7 +43,7 @@
     <div class="col-md-2">
         <a role="button" class="btn btn-primary" style="width: 100%" href="/Admin/Offers">
             <span class="glyphicon glyphicon-list-alt"></span>
-            <small>Oferty</small>
+            <small>Oferty użytkowników</small>
         </a>
     </div>
 
