--- a/nieruchomości/Views/Home/_ShowLand.cshtml
+++ b/nieruchomości/Views/Home/_ShowLand.cshtml
@@ -6,7 +6,7 @@
 }
 <div class="row" style="margin-right: 15px">
     <div class="col-md-12 custom-center-panel" style="margin-left: 15px">
-        <div class="pull-right" style="font-size: 12px; font-weight:100">Numer oferty: @Model.Number<br /><div class="pull-right" style="font-size: 12px; font-weight:100">Odwiedzin: <span class="badge">@(Model.Counter + 1)</span></div></div>
+        <div class="pull-right" style="font-size: 12px; font-weight:100">Numer oferty: @Model.Number<br /><div class="pull-right" style="font-size: 12px; font-weight:100">Odwiedzin: <span class="badge">@(Model.Counter)</span></div></div>
         <h4>@Model.Title</h4>
         <h5>Działka</h5>
         <div class="row" style="margin-bottom:20px">
