--- a/nieruchomości/Views/Admin/AdminMenu.cshtml
+++ b/nieruchomości/Views/Admin/AdminMenu.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="btn-group btn-group-justified" role="group" aria-label="...">
+﻿
+<div class="btn-group btn-group-justified" role="group">
     <div class="btn-group">
         <a role="button" class="btn btn-success" style="width: 100%" href="/Admin/Messages">
             <span class="glyphicon glyphicon-envelope"></span>
@@ -38,7 +39,7 @@
     <div class="btn-group">
         <a role="button" class="btn btn-primary" style="width: 100%" href="/Admin/Offers">
             <span class="glyphicon glyphicon-list-alt"></span>
-            <small>Oferty</small>
+            <small>Oferty użytkowników</small>
         </a>
     </div>
 
