--- a/nieruchomości/Views/Admin/Settings.cshtml
+++ b/nieruchomości/Views/Admin/Settings.cshtml
@@ -1,51 +1,23 @@
-﻿@model IEnumerable<Models.EntityModels.Clat>
+﻿@using Models.EntityModels
+@model Models.ViewModels.SettingsViewModel
 
-<p>
-@*    @Html.ActionLink("Create New", "Create")*@
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.From)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.To)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Percent)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Max)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CreatedAt)
-        </th>
-        <th></th>
-    </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.From)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.To)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Percent)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Max)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CreatedAt)
-        </td>
-        <td>
-            @*@Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })*@
-        </td>
-    </tr>
+@{
+    ViewBag.Title = "ShowCalc";
+
+     //var VAT = Model.CostPropertiesList.First(x => x.Type = PropertyType.VatClat);
+
+
 }
 
-</table>
+<div class="row" style="margin-right: 15px">
+    <div class="col-md-12 custom-center-panel" style="margin-left: 15px">
+        @Html.Partial("AdminMenu")
+        <h4>Ustawienia</h4>
+        
+        
+
+        
+    </div>
+</div>
+
